Footer y el sistema de registro e inicio de sesión

--- a/Cinemux/css/styles.css
+++ b/Cinemux/css/styles.css
@@ -72,3 +72,16 @@ left: 96%;
 top: 88%;
 
 }
+
+footer {
+
+background-color: black;
+padding: 20px;
+text-align: center;
+}
+
+footer p {
+
+color: white;
+
+}
